# NTSCloom

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/gui/: Cargo.toml
apps/gui/src/: main.rs
crates/ntscloom-core/: Cargo.toml
crates/ntscloom-core/src/: config.rs  dsp.rs  lib.rs  pipeline.rs
crates/ntscloom-core/tests/: pipeline_tests.rs
docs/: architecture.md  artifacts.md  gui.md  parameters.md  testing.md  ui.md
