[package]
name = "ntscloom-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27"
egui = "0.27"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
ntscloom-core = { path = "../../crates/ntscloom-core" }
rfd = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
